--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+gunicorn==20.1.0
 appdata==2.1.2
 click==8.0.3
 colorama==0.4.5
@@ -6,4 +7,4 @@ gunicorn==20.1.0
 psycopg2-binary==2.9.3
 Flask==2.1.3
 Flask_Bootstrap==3.3.7.1
-gunicorn==20.1.0
+Flask_SQLAlchemy==2.5.1
